# projetoyadira

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/doc/: crew.py  main.py
src/doc/config/: agents.yaml  tasks.yaml
