[project]
name = "doc"
version = "0.1.0"
description = "doc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
doc = "doc.main:run"
run_crew = "doc.main:run"
train = "doc.main:train"
replay = "doc.main:replay"
test = "doc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
